@@ -7,6 +7,3 @@ default = MonthWidgetFullView
 [DayLabel]
 default = DayLabelView
 
-[DcpContentItem]
-default = MContentItemView
-
